# Jurist

./: .env.example  .gitignore  README.md  TELEGRAM_SERVICE_RUNBOOK.md  pyproject.toml
config/: models.json  policy.json  practice_topics.json  roles.json
examples/: run_sample_services_contract.sh  sample_services_contract.txt
notes/: 00_project_decisions.md  01_domain_model.md  02_workflow.md  03_roles_and_models.md  04_google_drive_integration.md  05_storage_and_traces.md  06_service_boundary.md  07_work_plan.md  08_russian_legal_source_map.md  09_analytics_judicial_practice.md  10_project_separation.md  11_telegram_service_runbook.md
roles/: contract_drafter.md  legal_evidence_researcher.md  legal_reviewer.md  negotiation_strategist.md  protocol_secretary.md  risk_reviewer.md
schemas/: clause_issue.schema.json  contract_case.schema.json  disagreement_protocol.schema.json  legal_evidence_pack.schema.json  research_plan.schema.json  role_response.schema.json  trace_event.schema.json
scripts/: google_oauth_login.py  jurist_dashboard_admin.py  jurist_watchdog.sh
skills/: contract_review.md  disagreement_protocol_drafting.md  legal_evidence_research.md  legal_risk_review.md  negotiation_positioning.md  protocol_assembly.md  telegram_contract_intake_dialog.md
tests/: test_audio_transcription.py  test_case_dashboard.py  test_cli.py  test_config.py  test_damia.py  test_google_drive_export.py  test_google_drive_intake.py  test_legal_research.py  test_model_policy.py  test_model_runtime.py  test_orchestrator.py  test_practice_analytics.py  test_provider_billing.py  (+8 more)
(+28 files in other folders)
