[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jurist"
version = "0.1.0"
description = "Isolated legal contract review and disagreement protocol service."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23,<5",
  "google-api-python-client>=2.130,<3",
  "google-auth>=2.29,<3",
  "google-auth-oauthlib>=1.2,<2",
]

[project.scripts]
jurist = "contract_protocols.cli:main"
contract-protocols = "contract_protocols.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
